--- a/aboutus.html
+++ b/aboutus.html
@@ -45,15 +45,26 @@
     </span>
   </a>
 
-  <!-- Search Button -->
-  <button class="btn-search" aria-label="Search">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-      stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      viewBox="0 0 24 24">
-      <circle cx="11" cy="11" r="8"></circle>
-      <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-    </svg>
-  </button>
+  <!-- Wrapper to anchor popup relative to the button -->
+<div class="search-wrapper">
+      <!-- Search Button -->
+      <button class="btn-search" aria-label="Search">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </button>
+    </div>
+  </nav>
+
+  <!-- Search Popup -->
+  <div class="search-popup" id="searchPopup">
+    <form id="searchForm">
+      <input type="text" placeholder="Type to search..." />
+      <button type="submit">Search</button>
+    </form>
+  </div>
+</div>
 
   
         <div class="hero-content">
@@ -168,7 +179,7 @@
  
     <div class="product-card">
       <div class="circle">
-        <img src="images/Paneer.jpg" alt="Paneer">
+        <img src="images/paneer.png" alt="Paneer">
       </div>
       <button class="icon-btn">↗</button>
       <span class="category">Fruits</span>
@@ -367,5 +378,6 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>   
+  <script src="include.js"></script>
 </body>
 </html>
