--- a/blogs.html
+++ b/blogs.html
@@ -45,15 +45,26 @@
                     </span>
                 </a>
 
-  <!-- Search Button -->
-  <button class="btn-search" aria-label="Search">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-      stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      viewBox="0 0 24 24">
-      <circle cx="11" cy="11" r="8"></circle>
-      <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-    </svg>
-</button>
+  <!-- Wrapper to anchor popup relative to the button -->
+<div class="search-wrapper">
+      <!-- Search Button -->
+      <button class="btn-search" aria-label="Search">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </button>
+    </div>
+  </nav>
+
+  <!-- Search Popup -->
+  <div class="search-popup" id="searchPopup">
+    <form id="searchForm">
+      <input type="text" placeholder="Type to search..." />
+      <button type="submit">Search</button>
+    </form>
+  </div>
+</div>
 <div class="hero-content">
 <div class="hero-inner">
 <h1>Blogs</h1>
@@ -199,6 +210,6 @@
       });
    </script> 
    
-
+<script src="include.js"></script>
 </body>
 </html>
