--- a/footer.html
+++ b/footer.html
@@ -107,4 +107,9 @@
       </div>
     </div>
   </div>
+<!-- Go to Top Button (You can place this in your main HTML file) -->
+<button id="backToTop" class="back-to-top" aria-label="Back to top" title="Back to top">
+  ↑
+</button>
+
 </footer>
