--- a/products.html
+++ b/products.html
@@ -40,16 +40,26 @@
       +91 01234 56789
     </span>
   </a>
-    <!-- Search Button -->
-  <button class="btn-search" aria-label="Search">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-      stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      viewBox="0 0 24 24">
-      <circle cx="11" cy="11" r="8"></circle>
-      <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-    </svg>
-  </button>
+   <!-- Wrapper to anchor popup relative to the button -->
+<div class="search-wrapper">
+      <!-- Search Button -->
+      <button class="btn-search" aria-label="Search">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </button>
+    </div>
+  </nav>
+
+  <!-- Search Popup -->
+  <div class="search-popup" id="searchPopup">
+    <form id="searchForm">
+      <input type="text" placeholder="Type to search..." />
+      <button type="submit">Search</button>
+    </form>
   </div>
+</div>
 
 
   <!-- Hero Section -->
@@ -484,5 +494,6 @@
         document.getElementById('footer-placeholder').innerHTML = data;
       });
   </script>
+  <script src="include.js"></script>
 </body>
 </html>
