--- a/aboutus.html
+++ b/aboutus.html
@@ -368,16 +368,7 @@
   </div>
 </section>
 <!-- ===== Footer Placeholder (Load from footer.html) ===== -->
- <div id="footer"></div>
-
-  <script>
-    // Load footer dynamically
-    fetch("footer.html")
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>   
-  <script src="include.js"></script>
+ <div id="footer-placeholder"></div>
 </body>
+<script src="include.js"></script>
 </html>
