--- a/getintouch.html
+++ b/getintouch.html
@@ -146,16 +146,8 @@
 
   
 
-   <div id="footer"></div>
+   <div id="footer-placeholder"></div>
 
-  <script>
-    // Load footer dynamically
-    fetch("footer.html")
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
-<script src="include.js"></script>
 </body>
+<script src="include.js"></script>
 </html>
