--- a/getintouch.html
+++ b/getintouch.html
@@ -77,24 +77,33 @@
 
 
 
-  <!-- Contact Info -->
+<!-- Contact Info -->
   <section class="contact-info">
-    <div class="contact-card">
+  <div class="contact-card">
+    <div class="card-header">
       <i class="fa-solid fa-envelope"></i>
       <h3>Mail us 24/7</h3>
-      <p>pbmldf@godmin.com<br>pbmldf@ngainfo.com</p>
     </div>
-    <div class="contact-card">
+    <p>pbmldf@godmin.com<br>pbmldf@ngainfo.com</p>
+  </div>
+
+  <div class="contact-card">
+    <div class="card-header">
       <i class="fa-solid fa-phone"></i>
       <h3>Call us 24/7</h3>
-      <p>Phone : (+65) 654-545-5418<br>Mobile : (+01) 654-545-1235</p>
     </div>
-    <div class="contact-card">
+    <p>Phone : (+65) 654-545-5418<br>Mobile : (+01) 654-545-1235</p>
+  </div>
+
+  <div class="contact-card">
+    <div class="card-header">
       <i class="fa-solid fa-location-dot"></i>
       <h3>Our Locations</h3>
-      <p>4621 Ripe Top, Arch St, Alaska<br>99798, USA main city.</p>
     </div>
-  </section>
+    <p>4621 Ripe Top, Arch St, Alaska<br>99798, USA main city.</p>
+  </div>
+</section>
+
 
   <!-- Form Section -->
   <section class="contact-form-section">
