--- a/body.html
+++ b/body.html
@@ -1,31 +1,42 @@
 <section class="about-section">
 
-    <!-- Top Features -->
-    <div class="features">
-      <div class="feature-card">
-        <i class="fa-solid fa-tractor"></i>
-        <h3>Professional Farmers</h3>
-        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-      </div>
+   <div class="features">
+  <div class="feature-card">
+  <div class="feature-header">
+    <i class="fa-solid fa-tractor"></i>
+    <h3>Professional Farmers</h3>
+  </div>
+  <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
+  <a class="read-mores" href="">↗</a>
+</div>
 
-      <div class="feature-card">
-        <i class="fa-solid fa-glass-water"></i>
-        <h3>Fresh Milk</h3>
-        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-      </div>
-
-      <div class="feature-card">
-        <i class="fa-solid fa-bottle-droplet"></i>
-        <h3>Nutrition Products</h3>
-        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-      </div>
-
-      <div class="feature-card">
-        <i class="fa-solid fa-certificate"></i>
-        <h3>100% Guaranteed</h3>
-        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-      </div>
+  <div class="feature-card">
+    <div class="feature-header">
+      <i class="fa-solid fa-glass-water"></i>
+      <h3>Fresh Milk</h3>
     </div>
+    <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
+    <a class="read-mores" href="">↗</a>
+  </div>
+
+  <div class="feature-card">
+    <div class="feature-header">
+      <i class="fa-solid fa-bottle-droplet"></i>
+      <h3>Nutrition Products</h3>
+    </div>
+    <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
+    <a class="read-mores" href="">↗</a>
+  </div>
+
+  <div class="feature-card">
+    <div class="feature-header">
+      <i class="fa-solid fa-certificate"></i>
+      <h3>100% Guaranteed</h3>
+    </div>
+    <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
+    <a class="read-mores" href="">↗</a>
+  </div>
+</div>
 
     <!-- About & Image Section -->
     <div class="about-content">
@@ -208,15 +219,15 @@
   <div class="testimonial-cards">
     <div class="testimonial-card">
       <div class="stars">★★★★★</div>
-      <span class="quote-icon">“</span>
+      <span class="quote-icon">❝</span>
       <p>
         Nuziveedu Dairy Farm consistently delivers premium-quality dairy products 
         that stand out for their freshness and purity. Their milk, butter, and other offerings...
       </p>
       <div class="profile">
-        <img src="images/sam.jpg" alt="Profile" class="profile-img">
+        <img src="images/test1.png" alt="Profile" class="profile-img">
         <div>
-          <span class="profile-name">Sameer</span>
+          <span class="profile-name">Daniel Craig</span>
           <span class="profile-role">Supervisor</span>
         </div>
       </div>
@@ -224,7 +235,7 @@
     
     <div class="testimonial-card">
       <div class="stars">★★★★★</div>
-      <span class="quote-icon">“</span>
+      <span class="quote-icon">❝</span>
       <p>
         Milk, Marriage &amp; Middle-Class Morals 🥛 In our house, milk isn’t just nutrition—
         it’s tradition. For over 3 years now, my wife has been a die-hard fan of Nuziveedu Farm milk...
@@ -240,15 +251,15 @@
     
     <div class="testimonial-card">
       <div class="stars">★★★★★</div>
-      <span class="quote-icon">“</span>
+      <span class="quote-icon">❝</span>
       <p>
         A Delightful and Educational Visit to Sid’s Farm. Our recent trip to Nuziveedu Dairy Farm
         was an enlightening experience that offered a deep dive into the world of...
       </p>
       <div class="profile">
-        <img src="images/Mus.jpg" alt="Profile" class="profile-img">
+        <img src="images/test3.png" alt="Profile" class="profile-img">
         <div>
-          <span class="profile-name">Musthafa</span>
+          <span class="profile-name">Henry Cavil</span>
           <span class="profile-role">Co Founder</span>
         </div>
       </div>
