--- a/body.html
+++ b/body.html
@@ -251,7 +251,7 @@
     
     <div class="testimonial-card">
       <div class="stars">★★★★★</div>
-      <span class="quote-icon">❝</span>
+      <span class="quote-icon">“</span>
       <p>
         A Delightful and Educational Visit to Sid’s Farm. Our recent trip to Nuziveedu Dairy Farm
         was an enlightening experience that offered a deep dive into the world of...
