--- a/products.html
+++ b/products.html
@@ -68,7 +68,7 @@
   <div class="hero-left">
     <div class="top-row">
       <p class="small-box">LET'S DRINK HEALTHIER</p>
-      <img src="images/blog2.jpg" alt="Quality Badge" class="badge">
+      <img src="images/stamp-removebg-preview.png" alt="Quality Badge" class="badge">
     </div>
 
     <h1>
@@ -236,7 +236,7 @@
         <h3>Paneer Cubes</h3>
         <p class="price"><span class="old-price">₹180.00</span> ₹160.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -246,7 +246,7 @@
         <h3>Buffalo Ghee</h3>
         <p class="price">₹280.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -256,7 +256,7 @@
         <h3>Farm Curd</h3>
         <p class="price"><span class="old-price">₹32.00</span> ₹28.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <!-- Row 2 (repeat same products) -->
@@ -267,7 +267,7 @@
         <h3>Buffalo Milk</h3>
         <p class="price">₹45.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -277,7 +277,7 @@
         <h3>Paneer Cubes</h3>
         <p class="price"><span class="old-price">₹180.00</span> ₹160.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -287,7 +287,7 @@
         <h3>Buffalo Ghee</h3>
         <p class="price">₹280.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -297,7 +297,7 @@
         <h3>Farm Curd</h3>
         <p class="price"><span class="old-price">₹32.00</span> ₹28.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <!-- Row 3 (repeat same products) -->
@@ -308,7 +308,7 @@
         <h3>Buffalo Milk</h3>
         <p class="price">₹45.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -318,7 +318,7 @@
         <h3>Paneer Cubes</h3>
         <p class="price"><span class="old-price">₹180.00</span> ₹160.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -328,7 +328,7 @@
         <h3>Buffalo Ghee</h3>
         <p class="price">₹280.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
@@ -338,7 +338,7 @@
         <h3>Farm Curd</h3>
         <p class="price"><span class="old-price">₹32.00</span> ₹28.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
   </div>
 
