--- a/Header.html
+++ b/Header.html
@@ -1,14 +1,15 @@
+  <div class="get-in-touch-wrapper">
+      <a href="getintouch.html" class="get-in-touch">
+        Get In Touch <img src="images/geticonp-removebg-preview.png" alt="arrow" />
+      </a>
+    </div>
 <header class="hero-section">
   <nav class="navbar">
     <div class="logo">
       <img src="images/logofix2 (1).png" alt="Logo" />
     </div>
 
-    <div class="get-in-touch-wrapper">
-      <a href="getintouch.html" class="get-in-touch">
-        Get In Touch <img src="images/geticonp-removebg-preview.png" alt="arrow" />
-      </a>
-    </div>
+  
 
     <ul class="nav-menu">
       <li><a href="Home.html">Home</a></li>
@@ -19,6 +20,7 @@
       <li><a href="#">Farm Visit</a></li>
       <li><a href="#">Contact Us</a></li>
     </ul>
+    
 
     <div class="nav-contact">
       <a href="tel:+910123456789">
@@ -49,14 +51,16 @@
   </div>
 </div>
 
+
   <!-- Hero Content -->
   <div class="hero-content">
     <button class="tagline-btn">Believe in Quality</button>
     <h1>Quality Trust:<br> Direct to the Farm</h1>
     <p>We are passionate about what we do. We love our cows and are happy to produce a healthy wholesome product like milk.</p>
-    <button class="cta-btn">Contact Us ↗</button>
+    <button class="cta-btn">Contact Us<img src="images/black-arrow-rem.png" alt="arrow" /></a></button>
   </div>
 </header>
+
 
 <!-- Footer Placeholder -->
 <div id="footer"></div>
