--- a/body.html
+++ b/body.html
@@ -1,54 +1,64 @@
 <section class="about-section">
+  <div class="features">
 
-   <div class="features">
-  <div class="feature-card">
-  <div class="feature-header">
-    <i class="fa-solid fa-tractor"></i>
-    <h3>Professional Farmers</h3>
-  </div>
-  <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-  <a class="read-mores" href="">↗</a>
-</div>
-
-  <div class="feature-card">
-    <div class="feature-header">
-      <i class="fa-solid fa-glass-water"></i>
-      <h3>Fresh Milk</h3>
-    </div>
-    <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-    <a class="read-mores" href="">↗</a>
-  </div>
-
-  <div class="feature-card">
-    <div class="feature-header">
-      <i class="fa-solid fa-bottle-droplet"></i>
-      <h3>Nutrition Products</h3>
-    </div>
-    <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-    <a class="read-mores" href="">↗</a>
-  </div>
-
-  <div class="feature-card">
-    <div class="feature-header">
-      <i class="fa-solid fa-certificate"></i>
-      <h3>100% Guaranteed</h3>
-    </div>
-    <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
-    <a class="read-mores" href="">↗</a>
-  </div>
-</div>
-
-    <!-- About & Image Section -->
-    <div class="about-content">
-
-      <!-- Left Image -->
-      <div class="about-image">
-        <img src="images/aboutimg.jpg" alt="Farmer with Cow">
-        <div class="nutrition-count">
-          <h2>435+</h2>
-          <p>Nutrition Products We Sell</p>
+    <div class="feature-card">
+      <div class="feature-content">
+        <div class="feature-header">
+          <i class="fa-solid fa-tractor"></i>
+          <h3>Professional Farmers</h3>
         </div>
+        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
       </div>
+     <a class="read-mores" href=""><img src="images/blue-arrow-rem.png" alt="arrow" /></a>
+    </div>
+
+    <div class="feature-card">
+      <div class="feature-content">
+        <div class="feature-header">
+          <i class="fa-solid fa-glass-water"></i>
+          <h3>Fresh Milk</h3>
+        </div>
+        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
+      </div>
+        <a class="read-mores" href=""><img src="images/blue-arrow-rem.png" alt="arrow" /></a>
+    </div>
+
+    <div class="feature-card">
+      <div class="feature-content">
+        <div class="feature-header">
+          <i class="fa-solid fa-bottle-droplet"></i>
+          <h3>Nutrition Products</h3>
+        </div>
+        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
+      </div>
+      <a class="read-mores" href=""><img src="images/blue-arrow-rem.png" alt="arrow" /></a>
+    </div>
+
+    <div class="feature-card">
+      <div class="feature-content">
+        <div class="feature-header">
+          <i class="fa-solid fa-certificate"></i>
+          <h3>100% Guaranteed</h3>
+        </div>
+        <p>Nullam porta enim vel tellus commodo, eget laoreet odio ultricies.</p>
+      </div>
+      <a class="read-mores" href=""><img src="images/blue-arrow-rem.png" alt="arrow" /></a>
+    </div>
+
+  </div>
+</section>
+
+    <div class="about-content">
+  <div class="about-image-wrapper">
+    <div class="about-image">
+      <img src="images/aboutimg.jpg" alt="Farmer with Cow">
+    </div>
+    <div class="nutrition-count">
+      <h2>435+</h2>
+      <p>Nutrition Products We Sell</p>
+    </div>
+  </div>
+
 
       <!-- Right Text -->
       <div class="about-text">
@@ -61,13 +71,13 @@
 
         <div class="about-points">
           <div class="point">
-            <i class="fa-solid fa-check-circle"></i>
+            <img src="images/nimag2.png" alt="icon" />
             <h4>We don’t just say it, We prove it.</h4>
             <p>Every batch tested. Every packet pure. Check your daily milk report.</p>
           </div>
 
           <div class="point">
-            <i class="fa-solid fa-handshake"></i>
+           <img src="images/nimag1.png" alt="icon" />
             <h4>Come Over And See How We Do It.</h4>
             <p>It’s Fun, Learning and Memories. Packed into a day.</p>
           </div>
@@ -89,47 +99,65 @@
     </div>
   </div>
 
-  <!-- Product Cards -->
+  <!-- Product Cards Container -->
   <div class="products">
-    <div class="product-card">
-      <img src="images/milk.jpg" alt="Dairy Buffalo Milk">
-      <div class="product-info">
-        <span class="category">Milk</span>
-        <h3>Dairy Buffalo Milk</h3>
-        <p>
-          Milk is a very important part of our diet as it is extremely nutritious. 
-          It is a great source of calcium, vitamins and minerals.
-        </p>
+
+    <div class="card-wrapper">
+      <div class="product-card">
+        <img src="images/milk.jpg" alt="Dairy Buffalo Milk">
+        <div class="product-info">
+          <span class="category">Milk</span>
+          <h3>Dairy Buffalo Milk</h3>
+          <p>
+            Milk is a very important part of our diet as it is extremely nutritious. 
+            It is a great source of calcium, vitamins and minerals.
+          </p>
+        </div>
       </div>
+      <a class="product-arrow" href="#">
+        <img src="images/geticonp-removebg-preview.png" alt="arrow" />
+      </a>
     </div>
 
-    <div class="product-card">
-      <img src="images/nutri.jpg" alt="Nutrition Products">
-      <div class="product-info">
-        <span class="category">Products</span>
-        <h3>Nutrition Products</h3>
-        <p>
-          Cow’s milk is processed into a wide array of nutritious products, 
-          including milk itself as well as cultured products like yogurt and cheese, 
-          and dairy fats like butter and cream.
-        </p>
+    <div class="card-wrapper">
+      <div class="product-card">
+        <img src="images/nutri.jpg" alt="Nutrition Products">
+        <div class="product-info">
+          <span class="category">Products</span>
+          <h3>Nutrition Products</h3>
+          <p>
+            Cow’s milk is processed into a wide array of nutritious products, 
+            including milk itself as well as cultured products like yogurt and cheese, 
+            and dairy fats like butter and cream.
+          </p>
+        </div>
       </div>
+      <a class="product-arrow" href="#">
+        <img src="images/geticonp-removebg-preview.png" alt="arrow" />
+      </a>
     </div>
 
-    <div class="product-card">
-      <img src="images/Ghee.jpg" alt="Fresh Buffalo Ghee">
-      <div class="product-info">
-        <span class="category">Milk Products</span>
-        <h3>Fresh Buffalo Ghee</h3>
-        <p>
-          Cow ghee can be beneficial for health when consumed in moderation. 
-          It’s a source of healthy fats, vitamins, and other nutrients 
-          that can support various bodily functions.
-        </p>
+    <div class="card-wrapper">
+      <div class="product-card">
+        <img src="images/Ghee.jpg" alt="Fresh Buffalo Ghee">
+        <div class="product-info">
+          <span class="category">Milk Products</span>
+          <h3>Fresh Buffalo Ghee</h3>
+          <p>
+            Cow ghee can be beneficial for health when consumed in moderation. 
+            It’s a source of healthy fats, vitamins, and other nutrients 
+            that can support various bodily functions.
+          </p>
+        </div>
       </div>
+      <a class="product-arrow" href="#">
+        <img src="images/geticonp-removebg-preview.png" alt="arrow" />
+      </a>
     </div>
+
   </div>
 </section>
+
 
 <section class="choose-section">
   <span class="section-subtitle">Our Products</span>
@@ -241,9 +269,9 @@
         it’s tradition. For over 3 years now, my wife has been a die-hard fan of Nuziveedu Farm milk...
       </p>
       <div class="profile">
-        <img src="images/Reena.jpg" alt="Profile" class="profile-img">
+        <img src="images/test2.png" alt="Profile" class="profile-img">
         <div>
-          <span class="profile-name">Reena Basu</span>
+          <span class="profile-name">Emma Greed</span>
           <span class="profile-role">Customer</span>
         </div>
       </div>
@@ -267,7 +295,7 @@
   </div>
   
  
-  <div class="brand-bar">
+   <div class="brand-bar">
     <img src="images/organic-removebg-preview.png" alt="Organic Rice">
     <img src="images/farm-removebg-preview.png" alt="Farm">
     <img src="images/fresh-removebg-preview.png" alt="Farm Fresh">
@@ -278,7 +306,7 @@
 </div>
 <div class="hero-info-row">
   <div class="hero-img-container">
-    <img src="images/farmer12.jpg" alt="Farm field" />
+    <img src="images/info.jpg" alt="Farm field" />
   </div>
   <div class="hero-blue-card">
     <span class="hero-badge">What We Do</span>
@@ -339,11 +367,16 @@
 <section class="farm-banner">
   <img src="images/cont.jpg" alt="Dairy Farm">
   <div class="banner-content">
-    <h2>We’re popular leader in Dairy Farm market</h2>
-    <a href="discover.html" class="discover-btn">Discover</a>
+    <div class="overlay"></div> <!-- overlay behind content -->
+    <div class="left-content">
+      <div class="icon-circle">
+        <i class="fa-solid fa-handshake"></i>
+      </div>
+      <h2>We’re popular leader in Dairy Farm market</h2>
+    </div>
+    <a href="discover.html" class="discover-btn">Discover More ↗</a>
   </div>
 </section>
- </div>
 <section class="blog-section">
   <span class="section-tag">Latest Blog</span>
   
