--- a/products.html
+++ b/products.html
@@ -226,7 +226,7 @@
         <h3>Buffalo Milk</h3>
         <p class="price">₹45.00</p>
       </div>
-      <button class="cart-btn">🛒</button>
+      <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
     </div>
 
     <div class="product-card">
