--- a/blogs.html
+++ b/blogs.html
@@ -91,7 +91,7 @@
         <figure class="thumb">
           <img src="images/blog1.jpg" alt="Blog image">
           <span class="tag">FOOD CROPS</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -103,7 +103,7 @@
         <figure class="thumb">
           <img src="images/blog2.jpg" alt="Blog image">
           <span class="tag">ORGANIC FARM</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -115,7 +115,7 @@
         <figure class="thumb">
           <img src="images/blog3.jpg" alt="Blog image">
           <span class="tag">FARMING TIPS</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -127,7 +127,7 @@
         <figure class="thumb">
           <img src="images/blog4.jpg" alt="Blog image">
           <span class="tag">MIXED FARMING</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -139,7 +139,7 @@
         <figure class="thumb">
           <img src="images/blog5.jpg" alt="Blog image">
           <span class="tag">AGRICULTURE</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -151,7 +151,7 @@
         <figure class="thumb">
           <img src="images/blog6.jpg" alt="Blog image">
           <span class="tag">EXTENSIVE</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -163,7 +163,7 @@
         <figure class="thumb">
           <img src="images/blog7.jpg" alt="Blog image">
           <span class="tag">PRODUCTS</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -175,7 +175,7 @@
         <figure class="thumb">
           <img src="images/blog8.jpg" alt="Blog image">
           <span class="tag">Food Crops</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
@@ -187,7 +187,7 @@
         <figure class="thumb">
           <img src="images/blog9.jpg" alt="Blog image">
           <span class="tag">FARMER TIPS</span>
-          <a class="read-more" href="#">↗</a>
+          <a class="read-more" href="#"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
         </figure>
         <div class="meta">
           <span class="date">March 28, 2024</span>
