--- a/body.html
+++ b/body.html
@@ -48,7 +48,7 @@
   </div>
 </section>
 
-    <div class="about-content">
+<div class="about-content">
   <div class="about-image-wrapper">
     <div class="about-image">
       <img src="images/aboutimg.jpg" alt="Farmer with Cow">
@@ -245,53 +245,64 @@
 </div>
 
   <div class="testimonial-cards">
-    <div class="testimonial-card">
-      <div class="stars">★★★★★</div>
+
+    <!-- Testimonial 1 -->
+    <div class="testimonial-wrapper">
       <span class="quote-icon">❝</span>
-      <p>
-        Nuziveedu Dairy Farm consistently delivers premium-quality dairy products 
-        that stand out for their freshness and purity. Their milk, butter, and other offerings...
-      </p>
-      <div class="profile">
-        <img src="images/test1.png" alt="Profile" class="profile-img">
-        <div>
-          <span class="profile-name">Daniel Craig</span>
-          <span class="profile-role">Supervisor</span>
+      <div class="testimonial-card">
+        <div class="stars">★★★★★</div>
+        <p>
+          Nuziveedu Dairy Farm consistently delivers premium-quality dairy products 
+          that stand out for their freshness and purity. Their milk, butter, and other offerings...
+        </p>
+        <div class="profile">
+          <img src="images/test1.png" alt="Profile" class="profile-img">
+          <div>
+            <span class="profile-name">Daniel Craig</span>
+            <span class="profile-role">Supervisor</span>
+          </div>
         </div>
       </div>
     </div>
-    
-    <div class="testimonial-card">
-      <div class="stars">★★★★★</div>
+
+    <!-- Testimonial 2 -->
+    <div class="testimonial-wrapper">
       <span class="quote-icon">❝</span>
-      <p>
-        Milk, Marriage &amp; Middle-Class Morals 🥛 In our house, milk isn’t just nutrition—
-        it’s tradition. For over 3 years now, my wife has been a die-hard fan of Nuziveedu Farm milk...
-      </p>
-      <div class="profile">
-        <img src="images/test2.png" alt="Profile" class="profile-img">
-        <div>
-          <span class="profile-name">Emma Greed</span>
-          <span class="profile-role">Customer</span>
+      <div class="testimonial-card">
+        <div class="stars">★★★★★</div>
+        <p>
+          Milk, Marriage &amp; Middle-Class Morals 🥛 In our house, milk isn’t just nutrition—
+          it’s tradition. For over 3 years now, my wife has been a die-hard fan of Nuziveedu Farm milk...
+        </p>
+        <div class="profile">
+          <img src="images/test2.png" alt="Profile" class="profile-img">
+          <div>
+            <span class="profile-name">Emma Greed</span>
+            <span class="profile-role">Customer</span>
+          </div>
         </div>
       </div>
     </div>
-    
-    <div class="testimonial-card">
-      <div class="stars">★★★★★</div>
-      <span class="quote-icon">“</span>
-      <p>
-        A Delightful and Educational Visit to Sid’s Farm. Our recent trip to Nuziveedu Dairy Farm
-        was an enlightening experience that offered a deep dive into the world of...
-      </p>
-      <div class="profile">
-        <img src="images/test3.png" alt="Profile" class="profile-img">
-        <div>
-          <span class="profile-name">Henry Cavil</span>
-          <span class="profile-role">Co Founder</span>
+
+    <!-- Testimonial 3 -->
+    <div class="testimonial-wrapper">
+      <span class="quote-icon">❝</span>
+      <div class="testimonial-card">
+        <div class="stars">★★★★★</div>
+        <p>
+          A Delightful and Educational Visit to Sid’s Farm. Our recent trip to Nuziveedu Dairy Farm
+          was an enlightening experience that offered a deep dive into the world of...
+        </p>
+        <div class="profile">
+          <img src="images/test3.png" alt="Profile" class="profile-img">
+          <div>
+            <span class="profile-name">Henry Cavil</span>
+            <span class="profile-role">Co Founder</span>
+          </div>
         </div>
       </div>
     </div>
+
   </div>
   
  
@@ -372,9 +383,10 @@
       <div class="icon-circle">
         <i class="fa-solid fa-handshake"></i>
       </div>
-      <h2>We’re popular leader in Dairy Farm market</h2>
+      <h2>We’re popular leader in <br> Dairy Farm market</h2></br></h2>
     </div>
-    <a href="discover.html" class="discover-btn">Discover More ↗</a>
+    <a href="discover.html" class="discover-btn">Discover More 
+    <img src="images/black-arrow-rem.png" alt="arrow"></img></a>
   </div>
 </section>
 <section class="blog-section">
@@ -394,7 +406,7 @@
       <figure class="thumb">
         <img src="images/blog1.jpg" alt="Blog image">
         <span class="tag">FOOD CROPS</span>
-        <a class="read-more" href="blogs.html">↗</a>
+        <a class="read-more" href="blogs.html"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
       </figure>
       <div class="meta">
         <span class="date">March 28, 2024</span>
@@ -407,7 +419,7 @@
       <figure class="thumb">
         <img src="images/blog2.jpg" alt="Blog image">
         <span class="tag">ORGANIC FARM</span>
-        <a class="read-more" href="blogs.html">↗</a>
+        <a class="read-more" href="blogs.html"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
       </figure>
       <div class="meta">
         <span class="date">March 28, 2024</span>
@@ -420,7 +432,7 @@
       <figure class="thumb">
         <img src="images/blog3.jpg" alt="Blog image">
         <span class="tag">FARMING TIPS</span>
-        <a class="read-more" href="blogs.html">↗</a>
+        <a class="read-more" href="blogs.html"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
       </figure>
       <div class="meta">
         <span class="date">March 28, 2024</span>
@@ -434,7 +446,7 @@
       <figure class="thumb">
         <img src="images/blog4.jpg" alt="Blog image">
         <span class="tag">CROP MANAGEMENT</span>
-        <a class="read-more" href="blogs.html">↗</a>
+        <a class="read-more" href="blogs.html"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
       </figure>
       <div class="meta">
         <span class="date">March 29, 2024</span>
@@ -447,7 +459,7 @@
       <figure class="thumb">
         <img src="images/blog5.jpg" alt="Blog image">
         <span class="tag">SUSTAINABLE FARMING</span>
-        <a class="read-more" href="blogs.html">↗</a>
+        <a class="read-more" href="blogs.html"><img src="images/geticonp-removebg-preview.png" alt="arrow" /></a>
       </figure>
       <div class="meta">
         <span class="date">March 30, 2024</span>
